--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
@@ -13,35 +17,42 @@
   </head>
   <body>
     <!-- header сайту -->
-    <header class="header">
-      <a href="./index.html" class="logo">Web<span class="span-black">Studio</span></a>
-      <nav class="header-nav">
-        <ul class="header-nav-list">
-          <li><a href="./index.html" class="header-nav-link nav-active">Студия</a></li>
-          <li><a href="./portfolio.html" class="header-nav-link">Портфолио</a></li>
-          <li><a href="" class="header-nav-link">Контакты</a></li>
+    <header>
+      <div class="container">
+        <a href="./index.html" class="logo">Web<span class="span-black">Studio</span></a>
+        <nav class="header-nav">
+          <ul class="header-nav-list">
+            <li><a href="./index.html" class="header-nav-link nav-active">Студия</a></li>
+            <li><a href="./portfolio.html" class="header-nav-link">Портфолио</a></li>
+            <li><a href="" class="header-nav-link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contact-list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
-        </li>
-        <li><a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
 
     <!-- main сторінки -->
     <main>
       <!-- Герой -->
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="btn btn-hero">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="btn btn-hero">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- Преимущества (скрить заголовок )-->
-      <section class="advantages">
+      <section class="advantages container">
         <h2>Преимущества (нужно скрыть)</h2>
-        <ul>
+        <ul class="advantages-list">
           <li>
             <h3 class="advantages-title">Внимание к деталям</h3>
             <p class="advantages-desc">
@@ -70,9 +81,9 @@
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section class="activity">
+      <section class="activity container">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul>
+        <ul class="activity-list">
           <li>
             <img
               src="./images/programming.jpg"
@@ -95,47 +106,73 @@
 
       <!-- Наша команда -->
       <section class="team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/ihor.jpg" alt="Игорь Демьяненко продукт дизайнер" width="270" />
-            <h3 class="team-member-title">Игорь Демьяненко</h3>
-            <p class="team-member-desc">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/olha.jpg" alt="Ольга Репина фронтент разработчик" width="270" />
-            <h3 class="team-member-title">Ольга Репина</h3>
-            <p class="team-member-desc">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/myhail.jpg" alt="Николай Тарасов маркетинг" width="270" />
-            <h3 class="team-member-title">Николай Тарасов</h3>
-            <p class="team-member-desc">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/nikilaj.jpg" alt="Михаил Ермаков дизайнер" width="270" />
-            <h3 class="team-member-title">Михаил Ермаков</h3>
-            <p class="team-member-desc">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/ihor.jpg"
+                class="team-member-img"
+                alt="Игорь Демьяненко продукт дизайнер"
+                width="270"
+              />
+              <h3 class="team-member-title">Игорь Демьяненко</h3>
+              <p class="team-member-desc">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/olha.jpg"
+                class="team-member-img"
+                alt="Ольга Репина фронтент разработчик"
+                width="270"
+              />
+              <h3 class="team-member-title">Ольга Репина</h3>
+              <p class="team-member-desc">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/myhail.jpg"
+                class="team-member-img"
+                alt="Николай Тарасов маркетинг"
+                width="270"
+              />
+              <h3 class="team-member-title">Николай Тарасов</h3>
+              <p class="team-member-desc">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/nikilaj.jpg"
+                class="team-member-img"
+                alt="Михаил Ермаков дизайнер"
+                width="270"
+              />
+              <h3 class="team-member-title">Михаил Ермаков</h3>
+              <p class="team-member-desc">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- footer сайту -->
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span class="span-white">Studio</span></a>
-      <address class="footer-address">
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/K3Pn72QrReQsGpMP8" class="footer-address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-contact-link">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:+380961111111" class="footer-contact-link">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo logo-footer"
+          >Web<span class="span-white">Studio</span></a
+        >
+        <address class="footer-address">
+          <ul>
+            <li>
+              <a href="https://goo.gl/maps/K3Pn72QrReQsGpMP8" class="footer-address-link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="footer-contact-link">info@devstudio.com</a>
+            </li>
+            <li><a href="tel:+380961111111" class="footer-contact-link">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
