Додав внутрішні відступи в секціях

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- header сайту -->
-    <header>
+    <header class="header">
       <div class="container">
         <a href="./index.html" class="logo">Web<span class="span-black">Studio</span></a>
         <nav class="header-nav">
@@ -50,7 +50,7 @@
       </section>
 
       <!-- Преимущества (скрить заголовок )-->
-      <section class="advantages container">
+      <section class="container section">
         <h2>Преимущества (нужно скрыть)</h2>
         <ul class="advantages-list">
           <li>
@@ -105,7 +105,7 @@
       </section>
 
       <!-- Наша команда -->
-      <section class="team">
+      <section class="team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
           <ul>
