--- a/index.html
+++ b/index.html
@@ -19,19 +19,20 @@
     <!-- header сайту -->
     <header class="header">
       <div class="container">
-        <a href="./index.html" class="logo">Web<span class="span-black">Studio</span></a>
-        <nav class="header-nav">
-          <ul class="header-nav-list">
-            <li><a href="./index.html" class="header-nav-link nav-active">Студия</a></li>
-            <li><a href="./portfolio.html" class="header-nav-link">Портфолио</a></li>
-            <li><a href="" class="header-nav-link">Контакты</a></li>
-          </ul>
-        </nav>
+        <div class="header-container-nav">
+          <a href="./index.html" class="logo">Web<span class="span-black">Studio</span></a>
+          <nav class="header-nav">
+            <ul class="header-nav-list">
+              <li class="header-nav-item"><a href="./index.html" class="header-nav-link nav-active">Студия</a></li>
+              <li class="header-nav-item"><a href="./portfolio.html" class="header-nav-link">Портфолио</a></li>
+              <li class="header-nav-item"><a href="" class="header-nav-link">Контакты</a></li>
+          </nav>
+        </div>
         <ul class="header-contact-list">
-          <li>
+          <li class="header-contact-item">
             <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a></li>
+          <li class="header-contact-item"><a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a></li>
         </ul>
       </div>
     </header>
@@ -53,25 +54,25 @@
       <section class="container section">
         <h2>Преимущества (нужно скрыть)</h2>
         <ul class="advantages-list">
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-title">Внимание к деталям</h3>
             <p class="advantages-desc">
               Идейные соображения, а также начало повседневной работы по формированию позиции.
             </p>
           </li>
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-title">Пунктуальность</h3>
             <p class="advantages-desc">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-title">Планирование</h3>
             <p class="advantages-desc">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="advantages-item">
             <h3 class="advantages-title">Современные технологии</h3>
             <p class="advantages-desc">
               Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -84,17 +85,17 @@
       <section class="activity container">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="activity-list">
-          <li>
+          <li class="activity-item">
             <img
               src="./images/programming.jpg"
               alt="Процесс создания программного обеспечения"
               width="370"
             />
           </li>
-          <li>
+          <li class="activity-item">
             <img src="./images/qa.jpg" alt="Как мы тестируем наши проекты" width="370" />
           </li>
-          <li>
+          <li class="activity-item">
             <img
               src="./images/design.jpg"
               alt="Процесс создания индивидуального дизайна"
@@ -108,8 +109,8 @@
       <section class="team section">
         <div class="container">
           <h2 class="section-title">Наша команда</h2>
-          <ul>
-            <li>
+          <ul class="team-list">
+            <li class="team-item">
               <img
                 src="./images/ihor.jpg"
                 class="team-member-img"
@@ -119,7 +120,7 @@
               <h3 class="team-member-title">Игорь Демьяненко</h3>
               <p class="team-member-desc">Product Designer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/olha.jpg"
                 class="team-member-img"
@@ -129,7 +130,7 @@
               <h3 class="team-member-title">Ольга Репина</h3>
               <p class="team-member-desc">Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/myhail.jpg"
                 class="team-member-img"
@@ -139,7 +140,7 @@
               <h3 class="team-member-title">Николай Тарасов</h3>
               <p class="team-member-desc">Marketing</p>
             </li>
-            <li>
+            <li class="team-item">
               <img
                 src="./images/nikilaj.jpg"
                 class="team-member-img"
