--- a/portfolio.html
+++ b/portfolio.html
@@ -18,121 +18,149 @@
   <body>
     <!-- header сайту -->
     <header class="header">
-      <a href="./index.html" class="logo">Web<span class="span-black">Studio</span></a>
-      <nav class="header-nav">
-        <ul class="header-nav-list">
-          <li><a href="./index.html" class="header-nav-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="header-nav-link nav-active">Портфолио</a></li>
-          <li><a href="" class="header-nav-link">Контакты</a></li>
+      <div class="container">
+        <div class="header-container-nav">
+          <a href="./index.html" class="logo">Web<span class="span-black">Studio</span></a>
+          <nav class="header-nav">
+            <ul class="header-nav-list">
+              <li class="header-nav-item"><a href="./index.html" class="header-nav-link ">Студия</a></li>
+              <li class="header-nav-item"><a href="./portfolio.html" class="header-nav-link nav-active">Портфолио</a></li>
+              <li class="header-nav-item"><a href="" class="header-nav-link">Контакты</a></li>
+          </nav>
+        </div>
+        <ul class="header-contact-list">
+          <li class="header-contact-item">
+            <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
+          </li>
+          <li class="header-contact-item"><a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a></li>
         </ul>
-      </nav>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com" class="header-contact-link">info@devstudio.com</a>
-        </li>
-        <li><a href="tel:+380961111111" class="header-contact-link">+38 096 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
+
 
     <!-- main сторінки -->
     <main>
       <!-- section портфоліо (заголовок h1 потрібно сховати) -->
-      <section class="works">
-        <h1>Примеры работ (нужно скрыть)</h1>
-        <ul>
-          <li><button type="button" class="btn works-btn">Все</button></li>
-          <li><button type="button" class="btn works-btn">Веб-сайты</button></li>
-          <li><button type="button" class="btn works-btn">Приложения</button></li>
-          <li><button type="button" class="btn works-btn">Дизайн</button></li>
-          <li><button type="button" class="btn works-btn">Маркетинг</button></li>
+      <section class="works section">
+        <div class="container">
+          <h1>Примеры работ (нужно скрыть)</h1>
+        <ul class="works-nav">
+          <li class="works-item-nav"><button type="button" class="btn works-btn">Все</button></li>
+          <li class="works-item-nav"><button type="button" class="btn works-btn">Веб-сайты</button></li>
+          <li class="works-item-nav"><button type="button" class="btn works-btn">Приложения</button></li>
+          <li class="works-item-nav"><button type="button" class="btn works-btn">Дизайн</button></li>
+          <li class="works-item-nav"><button type="button" class="btn works-btn">Маркетинг</button></li>
         </ul>
 
-        <ul>
-          <li>
+        <ul class="works-item-list">
+          <li class="works-item">
             <img src="./images/technocrack.jpg" alt="Веб-сайт фирмы Технокряк" width="370" />
-            <h2 class="works-item-title">Технокряк</h2>
-            <p class="works-item-desc">Веб-сайт</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Технокряк</h2>
+              <p class="works-item-desc-text">Веб-сайт</p>
+            </div>
           </li>
-          <li>
+          <li class="works-item">
             <img
               src="./images/poster-new-orlean.jpg"
               alt="Дизайн постера New Orlean vs Golden Star"
               width="370"
             />
-            <h2 class="works-item-title">Постер New Orlean vs Golden Star</h2>
-            <p class="works-item-desc">Дизайн</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Постер New Orlean vs Golden Star</h2>
+              <p class="works-item-desc-text">Дизайн</p>
+            </div>  
           </li>
-          <li>
+          <li class="works-item">
             <img
               src="./images/restaurant-seafood.jpg"
               alt="Приложение ресторана Seafood"
               width="370"
             />
-            <h2 class="works-item-title">Ресторан Seafood</h2>
-            <p class="works-item-desc">Приложение</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Ресторан Seafood</h2>
+              <p class="works-item-desc-text">Приложение</p>
+            </div>
           </li>
-          <li>
+          <li class="works-item">
             <img src="./images/project-prime.jpg" alt="Маркетинг для проекта Prime" width="370" />
-            <h2 class="works-item-title">Проект Prime</h2>
-            <p class="works-item-desc">Маркетинг</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Проект Prime</h2>
+              <p class="works-item-desc-text">Маркетинг</p>
+            </div>
           </li>
-          <li>
+          <li class="works-item">
             <img src="./images/project-boxes.jpg" alt="Приложение для Boxes" width="370" />
-            <h2 class="works-item-title">Проект Boxes</h2>
-            <p class="works-item-desc">Приложение</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Проект Boxes</h2>
+              <p class="works-item-desc-text">Приложение</p>
+            </div>
           </li>
-          <li>
+          <li class="works-item">
             <img
               src="./images/inspiration-has-no-borders.jpg"
               alt="Веб-сайт Inspiration has no Borders"
               width="370"
             />
-            <h2 class="works-item-title">Inspiration has no Borders</h2>
-            <p class="works-item-desc">Веб-сайт</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Inspiration has no Borders</h2>
+              <p class="works-item-desc-text">Веб-сайт</p>
+            </div>
           </li>
-          <li>
+          <li class="works-item">
             <img
               src="./images/publisher-limited-edition.jpg"
               alt="Дизайн для издания Limited Edition"
               width="370"
             />
-            <h2 class="works-item-title">Издание Limited Edition</h2>
-            <p class="works-item-desc">Дизайн</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Издание Limited Edition</h2>
+              <p class="works-item-desc-text">Дизайн</p>
+            </div>
           </li>
-          <li>
+          <li class="works-item">
             <img src="./images/project-lab.jpg" alt="Маркетинг для проекта LAB" width="370" />
-            <h2 class="works-item-title">Проект LAB</h2>
-            <p class="works-item-desc">Маркетинг</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Проект LAB</h2>
+              <p class="works-item-desc-text">Маркетинг</p>
+            </div>
           </li>
-          <li>
+          <li class="works-item">
             <img
               src="./images/growing-business.jpg"
               alt="Приложение для Growing Business"
               width="370"
             />
-            <h2 class="works-item-title">Growing Business</h2>
-            <p class="works-item-desc">Приложение</p>
+            <div class="works-item-desc">
+              <h2 class="works-item-title">Growing Business</h2>
+              <p class="works-item-desc-text">Приложение</p>
+            </div>
           </li>
         </ul>
+        </div>
       </section>
     </main>
 
     <!-- footer сайту -->
     <footer class="footer">
-      <a href="./index.html" class="logo">Web<span class="span-white">Studio</span></a>
-      <address class="footer-address">
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/K3Pn72QrReQsGpMP8" class="footer-address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-contact-link">info@devstudio.com</a>
-          </li>
-          <li><a href="tel:+380961111111" class="footer-contact-link">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo logo-footer"
+          >Web<span class="span-white">Studio</span></a
+        >
+        <address class="footer-address">
+          <ul>
+            <li>
+              <a href="https://goo.gl/maps/K3Pn72QrReQsGpMP8" class="footer-address-link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="footer-contact-link">info@devstudio.com</a>
+            </li>
+            <li><a href="tel:+380961111111" class="footer-contact-link">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
