Доробив стилізацію сторінок

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>Портфолио</title>
     <link
       rel="stylesheet"
-      href="https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -150,7 +150,7 @@
         <address class="footer-address">
           <ul>
             <li>
-              <a href="https://goo.gl/maps/K3Pn72QrReQsGpMP8" class="footer-address-link"
+              <a href="https://goo.gl/maps/K3Pn72QrReQsGpMP8" class="footer-address-link" target="_blank" rel="noopener noreferrer"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
