--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <address class="footer-address">
           <ul>
             <li>
-              <a href="https://goo.gl/maps/K3Pn72QrReQsGpMP8" class="footer-address-link"
+              <a href="https://goo.gl/maps/K3Pn72QrReQsGpMP8" class="footer-address-link" target="_blank" rel="noopener noreferrer"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
