Вніс поправки ментора в 3 ДЗ

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
     <!-- main сторінки -->
     <main>
       <!-- section портфоліо (заголовок h1 потрібно сховати) -->
-      <section class="works section">
+      <section class="section">
         <div class="container">
-          <h1>Примеры работ (нужно скрыть)</h1>
+          <h1 class="visually-hidden">Примеры работ (нужно скрыть)</h1>
         <ul class="works-nav">
           <li class="works-item-nav"><button type="button" class="btn works-btn">Все</button></li>
           <li class="works-item-nav"><button type="button" class="btn works-btn">Веб-сайты</button></li>
