--- a/index.html
+++ b/index.html
@@ -51,58 +51,62 @@
       </section>
 
       <!-- Преимущества (скрить заголовок )-->
-      <section class="container section">
-        <h2>Преимущества (нужно скрыть)</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-title">Внимание к деталям</h3>
-            <p class="advantages-desc">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Пунктуальность</h3>
-            <p class="advantages-desc">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Планирование</h3>
-            <p class="advantages-desc">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Современные технологии</h3>
-            <p class="advantages-desc">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="visually-hidden">Преимущества (нужно скрыть)</h2>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3 class="advantages-title">Внимание к деталям</h3>
+              <p class="advantages-desc">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Пунктуальность</h3>
+              <p class="advantages-desc">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Планирование</h3>
+              <p class="advantages-desc">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="advantages-item">
+              <h3 class="advantages-title">Современные технологии</h3>
+              <p class="advantages-desc">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем мы занимаемся -->
-      <section class="activity container">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="activity-list">
-          <li class="activity-item">
-            <img
-              src="./images/programming.jpg"
-              alt="Процесс создания программного обеспечения"
-              width="370"
-            />
-          </li>
-          <li class="activity-item">
-            <img src="./images/qa.jpg" alt="Как мы тестируем наши проекты" width="370" />
-          </li>
-          <li class="activity-item">
-            <img
-              src="./images/design.jpg"
-              alt="Процесс создания индивидуального дизайна"
-              width="370"
-            />
-          </li>
-        </ul>
+      <section class="section activity-container">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="activity-list">
+            <li class="activity-item">
+              <img
+                src="./images/programming.jpg"
+                alt="Процесс создания программного обеспечения"
+                width="370"
+              />
+            </li>
+            <li class="activity-item">
+              <img src="./images/qa.jpg" alt="Как мы тестируем наши проекты" width="370" />
+            </li>
+            <li class="activity-item">
+              <img
+                src="./images/design.jpg"
+                alt="Процесс создания индивидуального дизайна"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Наша команда -->
@@ -113,32 +117,35 @@
             <li class="team-item">
               <img
                 src="./images/ihor.jpg"
-                class="team-member-img"
                 alt="Игорь Демьяненко продукт дизайнер"
                 width="270"
               />
-              <h3 class="team-member-title">Игорь Демьяненко</h3>
-              <p class="team-member-desc">Product Designer</p>
+              <div class="team-div-desc">
+                <h3 class="team-member-title">Игорь Демьяненко</h3>
+                <p class="team-member-desc">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
                 src="./images/olha.jpg"
-                class="team-member-img"
                 alt="Ольга Репина фронтент разработчик"
                 width="270"
               />
-              <h3 class="team-member-title">Ольга Репина</h3>
-              <p class="team-member-desc">Frontend Developer</p>
+              <div class="team-div-desc">
+                <h3 class="team-member-title">Ольга Репина</h3>
+                <p class="team-member-desc">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
                 src="./images/myhail.jpg"
-                class="team-member-img"
                 alt="Николай Тарасов маркетинг"
                 width="270"
               />
-              <h3 class="team-member-title">Николай Тарасов</h3>
-              <p class="team-member-desc">Marketing</p>
+              <div class="team-div-desc">
+                <h3 class="team-member-title">Николай Тарасов</h3>
+                <p class="team-member-desc">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -147,8 +154,10 @@
                 alt="Михаил Ермаков дизайнер"
                 width="270"
               />
-              <h3 class="team-member-title">Михаил Ермаков</h3>
-              <p class="team-member-desc">UI Designer</p>
+              <div class="team-div-desc">
+                 <h3 class="team-member-title">Михаил Ермаков</h3>
+                <p class="team-member-desc">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -168,9 +177,9 @@
               >
             </li>
             <li>
-              <a href="mailto:info@devstudio.com" class="footer-contact-link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="footer-contact-link" >info@devstudio.com</a>
             </li>
-            <li><a href="tel:+380961111111" class="footer-contact-link">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111" class="footer-contact-link" >+38 096 111 11 11</a></li>
           </ul>
         </address>
       </div>
